--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ input {
     margin: 0px 50px;
 }
 
-span{
+.input{
     display: flex;
     align-items: center;
 }
@@ -84,7 +84,7 @@ select {
     margin-right: 20px;
 }
 
-.diplomes span {
+.diplomes .input {
     margin : 0px 30px;
 }
 
@@ -102,6 +102,7 @@ select {
 
 textarea {
     text-align: center;
+    resize: none;
 }
 
 .cv {
